--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: build & push docker image...
         run: |
+          chmod +x ./gradlew
           docker build -t ${{secrets.DOCKER_USERNAME}}/dummy_talk .
           docker push ${{secrets.DOCKER_USERNAME}}/dummy_talk
 
