--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   spring-app:
     build: .
-    container_name: spring-app-test
+    container_name: DummyTalk_Container
     ports:
       - "8080:8080"
     environment:
