[FEAT] : 인증 이메일 설정 정보 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,9 +23,9 @@ spring:
         default_batch_fetch_size: 1000
 
   mail:
-    host: smtp.google.com
+    host: ${MAIL_SENDER_HOST}
     port: 587
-    username: jijysun@gmail.com
+    username: ${MAIL_SENDER_USERNAME}
     password: ${MAIL_SENDER_PASSWORD}
 
     properties:
@@ -34,6 +34,7 @@ spring:
           auth: true
           starttls:
             enabled: true
+      auth-code-expiration-millis: 300000
 
   ai:
     openai:
