--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,3 +43,7 @@ spring:
         options:
           model: gpt-3.5 turbo
           temperature: 0.7
+
+jwt:
+  secret:
+    key: ${JWT_SECRET_KEY}
