--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,9 @@ dependencies {
 
 	implementation 'org.springframework.ai:spring-ai-starter-model-openai'
 
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.5' // 또는 최신 버전
+    implementation 'io.jsonwebtoken:jjwt-impl:0.12.5' // 또는 최신 버전
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5' // 또는 최신 버전 (Jackson JSON 파서)
 
     implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
