--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-//    implementation 'org.springframework.boot:spring-boot-starter-batch' // Spring Batch!
+    implementation 'org.springframework.boot:spring-boot-starter-batch' // Spring Batch!
 
 	implementation 'org.springframework.ai:spring-ai-starter-model-openai' // 0922 기준 안쓰고 있음, 모델 낮추면 좀 될지도..?
 
@@ -37,7 +37,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5' // 또는 최신 버전 (Jackson JSON 파서)
 
     implementation 'org.projectlombok:lombok'
-//    testImplementation 'org.springframework.batch:spring-batch-test'
+    testImplementation 'org.springframework.batch:spring-batch-test'
     annotationProcessor 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
