--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.ai:spring-ai-starter-model-openai' // 0922 기준 안쓰고 있음, 모델 낮추면 좀 될지도..?
 
+    // Prometheus
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
     // jwt
     implementation 'io.jsonwebtoken:jjwt-api:0.12.5' // 또는 최신 버전
     implementation 'io.jsonwebtoken:jjwt-impl:0.12.5' // 또는 최신 버전
