--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,6 +48,18 @@ spring:
           model: gpt-4o
           temperature: 0.7
 
+
 jwt:
   secret:
     key: ${JWT_SECRET_KEY}
+
+management:
+  endpoint:
+    # 1. Prometheus 엔드포인트 자체를 활성화합니다. (Spring Boot 3.x 권장 방식)
+    prometheus:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        # 2. 웹을 통해 노출할 Actuator 엔드포인트를 지정합니다.
+        include: health, info, prometheus
