--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,9 @@ jobs:
             fi
             
             sudo docker-compose down || true
-            
-            echo "DB_HOST=${{secrets.DB_HOST}}" > .env
+
+#           이름 고정
+            echo "DB_HOST=mysql-db" > .env 
             echo "DB_NAME=${{secrets.DB_NAME}}" >> .env
             echo "DB_USERNAME=${{secrets.DB_USERNAME}}" >> .env
             echo "DB_PASSWORD=${{secrets.DB_PASSWORD}}" >> .env
