--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,8 +43,7 @@ jobs:
             
             sudo docker-compose down || true
 
-#           이름 고정
-            echo "DB_HOST=mysql-db" >> .env 
+            echo "DB_HOST=mysql-db" > .env 
             echo "DB_NAME=${{secrets.DB_NAME}}" >> .env
             echo "DB_USERNAME=${{secrets.DB_USERNAME}}" >> .env
             echo "DB_PASSWORD=${{secrets.DB_PASSWORD}}" >> .env
