--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,11 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
 
+    implementation 'com.querydsl:querydsl-jpa:5.1.0'
+    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+
     // Spring test
     testImplementation 'org.springframework.batch:spring-batch-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -56,6 +61,24 @@ dependencies {
     // mysql
     runtimeOnly 'com.mysql:mysql-connector-j'
 }
+
+def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile
+
+sourceSets {
+    main {
+        java {
+            srcDirs += querydslDir
+        }
+    }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.annotationProcessorGeneratedSourcesDirectory = file("$buildDir/generated/querydsl")
+    options.compilerArgs += [
+            '-Aquerydsl.generatedAnnotationClass=jakarta.annotation.Generated'
+    ]
+}
+
 
 dependencyManagement {
 	imports {
