--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+
 spring:
   application:
     name: DummyTalk_BE
@@ -10,6 +14,7 @@ spring:
   jpa:
     properties:
       hibernate:
+
         dialect: org.hibernate.dialect.MySQL8Dialect
         show_sql: true
         format_sql: true
