--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,11 @@ services:
       - DB_NAME=${DB_NAME}
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
+      - REDIS_HOST=redis-cache
+      - REDIS_PORT=6379
     depends_on:
       - mysql-db
+      - redis-cache
 
   mysql-db:
     image: mysql:8.0
@@ -29,6 +32,15 @@ services:
       # 배치 테이블 초기화 스크립트 마운트 (옵션)
       - ./src/main/resources/sql/batch_table_init.sql:/docker-entrypoint-initdb.d/batch_table_init.sql
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+
+  redis-cache:
+    image: redis:7-alpine # 가벼운 alpine 이미지 사용
+    container_name: DummyTalk_Redis
+    ports:
+      - "6379:6379" # 호스트와 컨테이너 포트 매핑
+    volumes:
+      - redis_data:/data # 데이터 영속성을 위한 볼륨
+    restart: always
 
   prometheus: # Prometheus 서비스 추가
     image: prom/prometheus:latest
