--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,11 @@ spring:
         hbm2ddl:
           auto: update
         default_batch_fetch_size: 1000
+
+  data:
+    redis:
+      host: ${DB_HOST}
+      port: 6379
   sql:
     init:
       mode: never
@@ -52,7 +57,6 @@ spring:
         options:
           model: gpt-4o
           temperature: 0.7
-
 
 jwt:
   secret:
