--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-batch' // Spring Batch!
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.ai:spring-ai-starter-model-openai' // 0922 기준 안쓰고 있음, 모델 낮추면 좀 될지도..?
 
     // Prometheus
@@ -55,6 +56,7 @@ dependencies {
 
     // mysql
     runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly ("io.micrometer:micrometer-registry-prometheus")
 }
 
 /*
