--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 logging:
   level:
-    org.hibernate.SQL: DEBUG
+    org.hibernate.SQL: INFO
 
 spring:
   application:
@@ -16,7 +16,7 @@ spring:
       hibernate:
 
         dialect: org.hibernate.dialect.MySQL8Dialect
-        show_sql: true
+        show_sql: false
         format_sql: true
         use_sql_comments: true
         hbm2ddl:
